// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard renders correctly with image 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-gEvEer gjbrEv fVNIMq"
    >
      <div
        class="sc-aXZVg sc-gEvEer hdseiA iDBIXi"
      >
        <div
          class="sc-aXZVg cSQFih"
        >
          <img
            alt=""
            class="sc-iGgWBj fygrEH"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="http://localhost/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=3840&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fcdn.sanity.io%2Fimages%2Fcuvjke51%2Fproduction%2F5a3b5c6b33c974b6ca030a5f7c531868ef8a4311-512x512.png&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-aXZVg hdseiA"
      >
        <h3
          class="sc-eldPxv gmsftW"
        >
          Ed Southall
        </h3>
      </div>
      <div
        class="sc-aXZVg jScGbX"
      >
        Subject Lead (maths)
      </div>
      <div
        class="sc-aXZVg sc-gEvEer iKyhVr eYvwPo"
      >
        <a
          class="sc-hzhJZQ hCUlEv sc-fHjqPf"
          href="#"
        >
          <span
            class="sc-eqUAAy dtaNGQ"
          >
            See bio
          </span>
          <div
            class="sc-aXZVg anoZA sc-fUnMCh"
          >
            <img
              alt=""
              class="sc-iGgWBj cMzyFO"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProfileCard renders correctly without image 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-gEvEer gjbrEv fVNIMq"
    >
      <div
        class="sc-aXZVg sc-gEvEer hdseiA iDBIXi"
      >
        <div
          class="sc-aXZVg jueMBN"
        />
      </div>
      <div
        class="sc-aXZVg hdseiA"
      >
        <h3
          class="sc-eldPxv gmsftW"
        >
          John Roberts
        </h3>
      </div>
      <div
        class="sc-aXZVg jScGbX"
      >
        Chief Executive
      </div>
      <div
        class="sc-aXZVg sc-gEvEer iKyhVr eYvwPo"
      >
        <a
          class="sc-hzhJZQ hCUlEv sc-fHjqPf"
          href="#"
        >
          <span
            class="sc-eqUAAy dtaNGQ"
          >
            See bio
          </span>
          <div
            class="sc-aXZVg anoZA sc-fUnMCh"
          >
            <img
              alt=""
              class="sc-iGgWBj cMzyFO"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;
